// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArticleTextToggleButton tests renders correctly 1`] = `
<div>
  <button
    class="toggleButton"
  />
</div>
`;

exports[`ArticleTextToggleButton tests renders correctly after show more button is clicked 1`] = `
<div>
  <button
    class="toggleButton"
  >
    Show more
  </button>
</div>
`;

exports[`ArticleTextToggleButton tests renders item correctly 1`] = `undefined`;
